# trisort-analysis

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: cli.py  config.py  db.py  logging.py
app/export/: csv_export.py
app/jira/: client.py  endpoints.py  parsers.py
app/sql_runner/: execute.py  history.py  saved_queries.py
app/sync/: full_sync.py  idempotency.py  incremental_sync.py  orchestrator.py  residency.py  transforms.py
docs/: FIRST_RUN_CHECKLIST.md
mocks/: jira_changelog_issue_example.json  jira_search_page_1.json  jira_worklog_issue_example.json
scripts/: bootstrap_db.sh  run_sync.sh
sql/: 001_schema.sql  002_indexes.sql  003_views.sql  900_seed_saved_queries.sql
tests/fixtures/: sample_changelog.json  sample_issue.json  sample_worklog.json
tests/unit/: test_changelog_flatten.py  test_config.py  test_csv_export.py  test_dry_run.py  test_dsn.py  test_incremental_watermark.py  test_jira_client_pagination.py  test_mock_mode.py  test_residency_derivation.py  test_sql_runner_history.py
