[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trisort-analysis"
version = "0.1.0"
description = "Local Jira-to-Postgres sync and analysis tooling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"typer>=0.12.3",
	"httpx>=0.27.0",
	"sqlalchemy>=2.0.30",
	"psycopg[binary]>=3.2.1",
	"pydantic-settings>=2.3.4",
	"python-dateutil>=2.9.0.post0",
	"tenacity>=8.5.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.3.2",
	"pytest-mock>=3.14.0",
	"respx>=0.21.1",
]

[project.scripts]
trisort = "app.cli:main"

[tool.setuptools]
packages = ["app", "app.jira", "app.sync", "app.sql_runner", "app.export"]

[tool.pytest.ini_options]
testpaths = ["tests"]
